[tool.poetry]
name = "udv-testing"
version = "0.1.0"
description = ""
authors = ["Nerush Kirill (home) <nerush.kirill@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
netmiko = "^4.2.0"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
